--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     -->
     <title>Flow Web</title>
     <style>
+      * { box-sizing: border-box; }
       body { margin: 0; box-sizing: border-box; }
     </style>
   </head>
